--- a/uia-winrt/uia-winrt.vcxproj
+++ b/uia-winrt/uia-winrt.vcxproj
@@ -5,6 +5,7 @@
     <CppWinRTOptimized>true</CppWinRTOptimized>
     <CppWinRTRootNamespaceAutoMerge>true</CppWinRTRootNamespaceAutoMerge>
     <CppWinRTGenerateWindowsMetadata>true</CppWinRTGenerateWindowsMetadata>
+    <CppWinRTComponent>true</CppWinRTComponent>
     <MinimalCoreWin>true</MinimalCoreWin>
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{451f1dca-26fa-438a-a197-044d7ebc4edd}</ProjectGuid>
@@ -33,12 +34,13 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>DynamicLibrary</ConfigurationType>
     <PlatformToolset>v143</PlatformToolset>
     <PlatformToolset Condition="'$(VisualStudioVersion)' == '16.0'">v142</PlatformToolset>
     <PlatformToolset Condition="'$(VisualStudioVersion)' == '15.0'">v141</PlatformToolset>
     <PlatformToolset Condition="'$(VisualStudioVersion)' == '14.0'">v140</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
+    <GenerateManifest>false</GenerateManifest>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Debug'" Label="Configuration">
     <UseDebugLibraries>true</UseDebugLibraries>
@@ -57,16 +59,13 @@
   <ImportGroup Label="PropertySheets">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
-  <ImportGroup Label="PropertySheets">
-    <Import Project="PropertySheet.props" />
-  </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <ItemDefinitionGroup>
     <ClCompile>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <PrecompiledHeaderOutputFile>$(IntDir)pch.pch</PrecompiledHeaderOutputFile>
-      <PreprocessorDefinitions>_CONSOLE;WIN32_LEAN_AND_MEAN;WINRT_LEAN_AND_MEAN;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_WINRT_DLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <WarningLevel>Level4</WarningLevel>
       <AdditionalOptions>%(AdditionalOptions) /permissive- /bigobj</AdditionalOptions>
     </ClCompile>
@@ -79,6 +78,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateWindowsMetadata>false</GenerateWindowsMetadata>
+      <ModuleDefinitionFile>uia-winrt.def</ModuleDefinitionFile>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Platform)'=='Win32'">
@@ -98,9 +98,13 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateWindowsMetadata>false</GenerateWindowsMetadata>
+      <ModuleDefinitionFile>uia-winrt.def</ModuleDefinitionFile>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Automation.h">
+      <DependentUpon>Automation.idl</DependentUpon>
+    </ClInclude>
     <ClInclude Include="AutomationCacheRequest.h">
       <DependentUpon>AutomationCacheRequest.idl</DependentUpon>
     </ClInclude>
@@ -119,17 +123,19 @@
     <ClInclude Include="AutomationProperty.h">
       <DependentUpon>AutomationProperty.idl</DependentUpon>
     </ClInclude>
-    <ClInclude Include="AutomationTreeWalker.h" />
+    <ClInclude Include="AutomationTreeWalker.h">
+      <DependentUpon>AutomationTreeWalker.idl</DependentUpon>
+    </ClInclude>
     <ClInclude Include="ControlType.h">
       <DependentUpon>ControlType.idl</DependentUpon>
     </ClInclude>
     <ClInclude Include="pch.h" />
-    <ClInclude Include="Automation.h">
-      <DependentUpon>Automation.idl</DependentUpon>
-    </ClInclude>
     <ClInclude Include="EnumHelpers.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Automation.cpp">
+      <DependentUpon>Automation.idl</DependentUpon>
+    </ClCompile>
     <ClCompile Include="AutomationCacheRequest.cpp">
       <DependentUpon>AutomationCacheRequest.idl</DependentUpon>
     </ClCompile>
@@ -148,18 +154,17 @@
     <ClCompile Include="AutomationProperty.cpp">
       <DependentUpon>AutomationProperty.idl</DependentUpon>
     </ClCompile>
-    <ClCompile Include="AutomationTreeWalker.cpp" />
+    <ClCompile Include="AutomationTreeWalker.cpp">
+      <DependentUpon>AutomationTreeWalker.idl</DependentUpon>
+    </ClCompile>
     <ClCompile Include="ControlType.cpp">
       <DependentUpon>ControlType.idl</DependentUpon>
     </ClCompile>
     <ClCompile Include="EnumHelpers.cpp" />
-    <ClCompile Include="main.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="Automation.cpp">
-      <DependentUpon>Automation.idl</DependentUpon>
-    </ClCompile>
+    <ClCompile Include="$(GeneratedFilesDir)module.g.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Midl Include="AutomationCacheRequest.idl" />
@@ -176,7 +181,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-    <None Include="PropertySheet.props" />
+    <None Include="uia-winrt.def" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
