--- a/uia-winrt/uia-winrt.vcxproj
+++ b/uia-winrt/uia-winrt.vcxproj
@@ -129,6 +129,7 @@
     <ClInclude Include="ControlType.h">
       <DependentUpon>ControlType.idl</DependentUpon>
     </ClInclude>
+    <ClInclude Include="AutomationFocusChangedEventHandler.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="EnumHelpers.h" />
     <ClInclude Include="VariantHelpers.h" />
@@ -162,6 +163,7 @@
       <DependentUpon>ControlType.idl</DependentUpon>
     </ClCompile>
     <ClCompile Include="EnumHelpers.cpp" />
+    <ClCompile Include="AutomationFocusChangedEventHandler.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
